--- a/war/css/style.css
+++ b/war/css/style.css
@@ -13,8 +13,8 @@ a:hover{
 ul{
     list-style: none;
     font-weight: bold;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 li{
